--- a/index.html
+++ b/index.html
@@ -13,34 +13,32 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <script src="main.js" defer></script> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <script src="app.js" defer></script>
   </head>
   <body>
     <div id="starting">
-      <h1>Welcome to "Find Your Hat" adventure</h1>
-      <p>Would you like to start a game?</p>
+      <h1 class="mainH1">Welcome to "Find Your Hat" adventure</h1>
+      <p class="mainP">Would you like to start a game?</p>
       <input type="button" id="openBtn" value="YESSSS!!! Go for it" />
       <input
         type="button"
         id="closeBtn"
         onClick="window.close()"
-        value="No! Get me out of here"
+        value="Get me out of here please"
       />
-    </div>
-    <!-- <img src="./icons/circle-regular.svg" alt="" srcset="" /> -->
-    <div>
-      <!-- <table id="my-table">
-        <tr>
-          <td>Row 1</td>
-        </tr>
-        <tr>
-          <td>Row 2</td>
-        </tr>
-        <tr>
-          <td>Row 3</td>
-        </tr>
-      </table> -->
     </div>
   </body>
 </html>
